--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.jakewharton:butterknife:6.1.0'
     implementation 'com.github.dmytrodanylyk.android-process-button:library:1.0.4'
-    api 'us.belka:androidtoggleswitch:1.2.2'
+    implementation 'com.github.nkzawa:socket.io-client:0.6.0'
     annotationProcessor 'com.jakewharton:butterknife:6.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
