--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,15 @@
         android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".SessionActivity_stud"></activity>
-        <activity android:name=".MainActivity_stud" />
+        <activity android:name=".SessionActivity_stud" />
+        <activity android:name=".MainActivity_stud"
+            android:label="Список занятий"
+            android:theme="@style/AppTheme.TitleBar"/>
         <activity android:name=".SessionActivity" />
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_main" />
-        <activity
-            android:name=".LoginActivity_new"
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppTheme.TitleBar"
+            android:label="Список занятий" />
+        <activity android:name=".LoginActivity_new"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,7 +33,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignupActivity" />
+        <activity android:name=".SignupActivity"
+            android:theme="@style/AppTheme.TitleBar"/>
     </application>
 
 </manifest>
