--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -17,11 +18,15 @@
         android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".SessionActivity_stud" />
+        <activity android:name=".SessionActivity_stud"
+            android:label="Занятие"
+            android:theme="@style/AppTheme.TitleBar"/>
         <activity android:name=".MainActivity_stud"
             android:label="Список занятий"
             android:theme="@style/AppTheme.TitleBar"/>
-        <activity android:name=".SessionActivity" />
+        <activity android:name=".SessionActivity"
+            android:label="Список студентов"
+            android:theme="@style/AppTheme.TitleBar"/>
         <activity android:name=".MainActivity"
             android:theme="@style/AppTheme.TitleBar"
             android:label="Список занятий" />
@@ -33,8 +38,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignupActivity"
-            android:theme="@style/AppTheme.TitleBar"/>
+        <activity android:name=".SignupActivity" />
     </application>
 
 </manifest>
